--- a/index.html
+++ b/index.html
@@ -1,14 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="en-us">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hangman</title>
-    
-    <script src="Hangman.html"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
+    <div class="container">
+        <div class="row justify-content-center">
+            <h1><b>Hangman - Super Smash Bros. Edition</b></h1>
+        </div>
+
+        <div class="row justify-content-center">
+            <p>Press Any Key to Start the Game!</p>
+        </div>
+
+        <br>
+
+        <div class="row justify-content-center">
+                <h2>Letters to Guess: <span id="randomLetters">_ _ _ _ _ </span></h2>
+        </div>
+
+        <br>
+
+        <div class="row">
+            <div class="col-md-6 justify-content-center d-flex">
+                <p>Wrong Guesses: <span id="incorrectGuess"></span></p>
+            </div>
+
+            <div class="col-md-6 justify-content-center d-flex">
+                <p>Remaining Guesses: <span id="remainingGuess">6</span></p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6 justify-content-center d-flex">
+                <p>Games Won: <span id="wins">0</span></p>
+            </div>
+
+            <div class="col-md-6 justify-content-center d-flex">
+                <p>Games Lost: <span id="losses">0</span></p>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="col">
+                <div class="row justify-content-center">
+                    <h3>Last Answer:</h3>
+                </div>
+                <div class="row justify-content-center">
+                    <p id="lastAnswerName"></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row justify-content-center">
+            <img id="lastAnswerPicture">
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
 
 </body>
+
 </html>
